Fix potential z-index conflicts and smoothen opacity.

--- a/css/mq.scss
+++ b/css/mq.scss
@@ -38,7 +38,7 @@
 
     &.frame--single {
 
-      z-index: 99;
+      z-index: 98;
       overflow: hidden;
 
       /* :/ */
